--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,10 @@
     "axios": "^1.2.1",
     "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
+    "markdown-it": "^14.1.0",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
+    "turndown": "^7.2.0",
     "vue": "^3.4.18",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.12"
