--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@quasar/extras": "^1.16.4",
+    "audio-recorder-polyfill": "^0.4.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.2.1",
     "dotenv": "^16.4.7",
