--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "markdown-it": "^14.1.0",
+    "moment": "^2.30.1",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "turndown": "^7.2.0",
